# broad-listening-book

./: 12_ブロードリスニング要素技術解説.md  AGENTS.md  README.MD  pyproject.toml
en/: 00_endorsement_from_audrey_tang.md  00_preface.md  01_what_is_broad_listening.md  02_broad_listening_vs_surveys.md  03_digital_democracy_and_new_public_voice.md  04_01_takahiro_anno_initiatives.md  04_02_dpfp_parliamentary_questions.md  04_03_sumino_ntv_election_special.md  04_04_mapping_public_opinion_with_polis.md  04_05_asahi_special_feature.md  04_spread_of_broad_listening_in_japan.md  05_tokyo_shin_tokyo_2050_policy_shift.md  06_01_team_mirai.md  06_02_team_mirai_2026_house_of_representatives_election.md  06_03_nippon_ishin_no_kai.md  06_04_democratic_party_for_the_people.md  06_05_komeito.md  06_broad_listening_in_national_elections.md  07_02_ryosuke_idei_case.md  07_03_saisei_no_michi_kazuya_obanayama.md  07_use_in_local_elections.md  08_01_ota_city_jibungotoka_meeting.md  08_02_hiroshima_case.md  08_use_in_local_governments.md  09_01_altius_link_interview.md  09_02_cybozu.md  09_use_in_companies_and_npos.md  10_00_dd2030_kocho_ai_development.md  10_01_boots_inc.md  10_02_code_for_japan.md  10_03_plural_reality.md  10_04_democracy_x.md  10_05_litela_kai_tanaka.md  10_broad_listening_as_a_business.md  11_01_taiwan.md  11_02_birth_of_polis.md  11_03_bowling_green.md  11_04_israel_palestine_remesh_case.md  11_05_harnessing_connective_action.md  11_global_broad_listening_trends.md  (+5 more)
en/column/: fujitsu_enterprise_ai_for_public_comments.md  safe_empathy.md  (+3 more)
scripts/: build_pdf.py  english.py
(+2 files in other folders)
