[project]
name = "broad-listening-book"
version = "0.1.0"
description = "ブロードリスニング書籍の原稿管理"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "playwright>=1.40",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "umap-learn>=0.5.6",
    "numba>=0.59",
    "lightgbm>=4.0",
    "gensim>=4.3",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
build-pdf = "scripts.build_pdf:main"
